--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ build-Hamster-2-0-Desktop_Qt_5_11_0_MinGW_32bit-Release
 build-Hamster-2-0-Desktop_Qt_5_11_0_MinGW_32bit-Debug
 build-Hamster-2-0-Desktop_Qt_5_11_0_MinGW_32bit-Profile
 Hamster2
+files
