--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ build-Hamster-2-0-Desktop_Qt_5_11_0_MinGW_32bit-Release
 build-Hamster-2-0-Desktop_Qt_5_11_0_MinGW_32bit-Debug
 build-Hamster-2-0-Desktop_Qt_5_11_0_MinGW_32bit-Profile
 Hamster2
+Hamster-2-0
 files
